<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/dashboardFragment">

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.uptbal.sace.ui.fragments.DashboardFragment"
        android:label="@string/nav_inicio"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/situacionFragment"
        android:name="com.uptbal.sace.ui.fragments.SituacionFragment"
        android:label="@string/nav_situacion"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/notasFragment"
        android:name="com.uptbal.sace.ui.fragments.NotasFragment"
        android:label="@string/nav_notas"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/inscripcionesFragment"
        android:name="com.uptbal.sace.ui.fragments.InscripcionesFragment"
        android:label="@string/nav_inscripciones"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/historicosFragment"
        android:name="com.uptbal.sace.ui.fragments.HistoricosFragment"
        android:label="@string/nav_historicos"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/noticiasFragment"
        android:name="com.uptbal.sace.ui.fragments.NoticiasFragment"
        android:label="@string/nav_noticias"
        tools:layout="@layout/fragment_list">
        <action
            android:id="@+id/action_noticiasFragment_to_noticiaDetalleFragment"
            app:destination="@id/noticiaDetalleFragment" />
    </fragment>

    <fragment
        android:id="@+id/noticiaDetalleFragment"
        android:name="com.uptbal.sace.ui.fragments.NoticiaDetalleFragment"
        android:label="@string/nav_noticias"
        tools:layout="@layout/fragment_noticia_detalle">
        <argument
            android:name="noticiaId"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/perfilFragment"
        android:name="com.uptbal.sace.ui.fragments.PerfilFragment"
        android:label="@string/nav_perfil"
        tools:layout="@layout/fragment_perfil" />
</navigation>
